force-app/main/default/objects/Assignment_Record__c/Assignment_Record__c.object-meta.xml
<CustomObject>
    <label>Assignment Record</label>
    <nameField>
        <displayFormat>ASGN-{00000}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>