force-app/main/default/objects/Assignment_Record__c/fields/Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name__c</fullName>
    <description>New owner name</description>
    <label>Assignee Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>