force-app/main/default/objects/Assignment_Record__c/fields/Assignor_Email__c.field-meta.xml
<CustomField>
    <fullName>Assignor_Email__c</fullName>
    <description>Current owner email</description>
    <label>Assignor Email</label>
    <type>Email</type>
</CustomField>