force-app/main/default/objects/Assignment_Record__c/fields/Assignor_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignor_Name__c</fullName>
    <description>Current owner name</description>
    <label>Assignor Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>